--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=01030907l
-spring.datasource.url=jdbc:mysql://localhost:3306/todolist
+spring.datasource.url=jdbc:mysql://localhost:3306/student_subjects
 
 spring.jpa.hibernate.ddl-auto=update
